Import of ALEXP/HTML-Template-Associate-1.10 from CPAN.
gitpan-cpan-distribution: HTML-Template-Associate
gitpan-cpan-version:      1.10
gitpan-cpan-path:         ALEXP/HTML-Template-Associate-1.10.tar.gz
gitpan-cpan-author:       ALEXP
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl module HTML::Template::Associate::FormValidator
 
-0.01 Wed Jul 30 16:59:16 2003
+1.09 Wed Jul 30 16:59:16 2003
 	- original version; created by ExtUtils::ModuleMaker 0.32
-
+1.10 Mon Aug 05 18:00:00 2003 
+	- revised version; added support for Data::FormValidator::Results
 
