--- a/README
+++ b/README
@@ -1,11 +1,19 @@
+INSTALLATION
+ 
+perl Makefile.PL
+make 
+make test
+make install
+
+
 NAME
     HTML::Template::Associate
 
 SYNOPSIS
-      #Example usage with CGI and FormValidator as the target
+      #Example usage with CGI and FormValidator as the target 
 
       use CGI qw/:standard/;
-      use HTML::FormValidator;
+      use Data::FormValidator;
       use HTML::Template;
       use HTML::Template::Associate;
 
@@ -31,9 +39,18 @@ SYNOPSIS
                 defaults => {
                     country => "Canada",
                 },
+                msgs => {
+                    prefix=> 'error_',
+                    missing => 'Not Here!',
+                    invalid => 'Problematic!',
+                    invalid_seperator => ' <br /> ',
+                    format => 'ERROR: %s',
+                    any_errors => 'some_errors',
+                }
+
       };
 
-      my $validator = HTML::FormValidator->new;
+      my $validator = Data::FormValidator->new;
       my $results = $validator->check ( scalar $cgi->Vars, $input_profile ); 
 
       my $associate = HTML::Template::Associate->new( {
@@ -73,10 +90,23 @@ SYNOPSIS
 
       I think <TMPL_VAR NAME=country> is very big country. 
 
+      <!-- Optional use of Data::FormValidator::Results msgs interface -->
+
+      Message Fields:
+
+      <TMPL_LOOP NAME=MSGS_FIELDS>
+          Field Name: <TMPL_VAR NAME=FIELD_NAME><br>
+          Field Value: <TMPL_VAR NAME=FIELD_VALUE><br>
+      </TMPL_LOOP>
+
+      <TMPL_IF NAME=MSGS_error_city>
+            Our default error message set in the profiling code is: <TMPL_VAR NAME=MSGS_error_city> 
+      </TMPL_IF>
+     
 DESCRIPTION
       HTML::Template::Associate bridges gap between HTML::Template and 
       other modules that can be used in conjunction with it to do something 
-      useful together, like for example HTML::FormValidator that can verify form inputs. 
+      useful together, like for example Data::FormValidator that can verify form inputs. 
       The primary reason I wrote this is that I needed something to bridge those two and 
       the thought of creating something more expandable came to mind.   
 
@@ -95,7 +125,7 @@ DESCRIPTION
       I hope that with time more useful associate objects spring into existence.
 
 USAGE
-      #where $results = HTML::FormValidator::Results; for example
+      #where $results = Data::FormValidator::Results; for example
 
       my $associate = HTML::Template::Associate->new( {
             target => 'FormValidator',
