Import of ALEXP/HTML-Template-Associate-1.11 from CPAN.
gitpan-cpan-distribution: HTML-Template-Associate
gitpan-cpan-version:      1.11
gitpan-cpan-path:         ALEXP/HTML-Template-Associate-1.11.tar.gz
gitpan-cpan-author:       ALEXP
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,7 +1,10 @@
 Revision history for Perl module HTML::Template::Associate::FormValidator
 
+
 1.09 Wed Jul 30 16:59:16 2003
 	- original version; created by ExtUtils::ModuleMaker 0.32
 1.10 Mon Aug 05 18:00:00 2003 
 	- revised version; added support for Data::FormValidator::Results
+1.11 Mon Nov 28 12:00:00 2005
+	- fixed a minor issue with array value handling
 
