--- a/README
+++ b/README
@@ -83,7 +83,8 @@ SSYYNNOOPPSSIISS
              City name is missing, please fix this.
          </TMPL_IF>
 
-         <!-- We can also access our normal field names since $cgi object was passed as associate as well -->
+         <!-- We can also access our normal field names
+               since $cgi object was passed as associate as well -->
 
          I think <TMPL_VAR NAME=country> is very big country.
 
@@ -97,30 +98,28 @@ SSYYNNOOPPSSIISS
          </TMPL_LOOP>
 
          <TMPL_IF NAME=MSGS_error_city>
-               Our default error message set in the profiling code is: <TMPL_VAR NAME=MSGS_error_city>
+               Our default error message set in the profiling code is:
+                       <TMPL_VAR NAME=MSGS_error_city>
          </TMPL_IF>
 
 DDEESSCCRRIIPPTTIIOONN
          HTML::Template::Associate bridges gap between HTML::Template and
          other modules that can be used in conjunction with it to do something
-         useful together, like for example Data::FormValidator that can verify form inputs.
-         The primary reason I wrote this is that I needed something to bridge those two and
-         the thought of creating something more expandable came to mind.
+         useful together, like for example Data::FormValidator that can verify
+         form inputs.
 
-         The idea is that every associate object can map required data structure onto
-         the one which corresponds to the one being documented publicly in the HTML::Template.
-         The factory will then instantiate the target class and user can then make it available
-         to HTML::Template via associate argument during object construction.
-         The data structures   then become automatically visible to your templates.
+         The idea is that every associate object can map required data structure
+         onto the one which corresponds to the one found in HTML::Template.
+         The factory will then instantiate the target class and user can then make
+         it available to HTML::Template via associate argument during object
+         construction. The data structures then become automatically visible to
+         your templates.
 
          This module is abstract class it provides no mapping functionality
          whatsoever, but rather defines common interface to all associate
          objects underneath it and acts as a object production factory.
-
          You should however use this module whenever you wish to access a
          concrete associate class that provides functionality you desire.
-
-         I hope that with time more associate objects spring into existence.
 
 UUSSAAGGEE
          #where $results = Data::FormValidator::Results; for example
@@ -188,4 +187,4 @@ SSEEEE AALLSSOO
 
 
 
-perl v5.8.7                       2005-12-14      HTML::Template::Associate(3)
+perl v5.8.7                       2006-01-04      HTML::Template::Associate(3)
