Import of ALEXP/HTML-Template-Associate-1.18 from CPAN.
gitpan-cpan-distribution: HTML-Template-Associate
gitpan-cpan-version:      1.18
gitpan-cpan-path:         ALEXP/HTML-Template-Associate-1.18.tar.gz
gitpan-cpan-author:       ALEXP
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -17,4 +17,6 @@ Revision history for Perl modules HTML::Template::Associate and HTML::Template::
 1.16 Sun Dec 31 12:00:00 2005 
 	- added HTML::Template::Associate::DBI
 1.17 Thu Jan 06 12:00:00 2006
-	- fixed a few bugs
+	- fixed a few issues
+1.18 Mon Jan 23 12:00:00 2006
+	- fixed a few issues and updated docs
