Import of ALEXP/HTML-Template-Associate-2.00 from CPAN.
gitpan-cpan-distribution: HTML-Template-Associate
gitpan-cpan-version:      2.00
gitpan-cpan-path:         ALEXP/HTML-Template-Associate-2.00.tar.gz
gitpan-cpan-author:       ALEXP
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -20,3 +20,5 @@ Revision history for Perl modules HTML::Template::Associate and HTML::Template::
 	- fixed a few issues
 1.18 Mon Jan 23 12:00:00 2006
 	- fixed a few issues and updated docs
+2.00 Sun Dec 07 18:00:00 2008
+	- Resolving http://rt.cpan.org/Ticket/Display.html?id=4338
