Import of ALEXP/HTML-Template-Associate-2.01 from CPAN.
gitpan-cpan-distribution: HTML-Template-Associate
gitpan-cpan-version:      2.01
gitpan-cpan-path:         ALEXP/HTML-Template-Associate-2.01.tar.gz
gitpan-cpan-author:       ALEXP
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -22,3 +22,5 @@ Revision history for Perl modules HTML::Template::Associate and HTML::Template::
 	- fixed a few issues and updated docs
 2.00 Sun Dec 07 18:00:00 2008
 	- Resolving http://rt.cpan.org/Ticket/Display.html?id=4338
+2.01 Thu May 10 09:00:00 2012
+        - fixed PREREQ_PM
